# bbapi

./: README.rst  setup.cfg  tox.ini
bbapi/: app.py  cli.py  gpio.py
bbapi/static/: index.html
