[metadata]
name = bbapi
author = Gregory Haynes
author-email = greg@greghaynes.net
summary = A REST api for reading Beagle Bone inputs
description-file = README.rst
home-page = https://github.com/greghaynes/bbapi
license = Apache-2
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    setup
    distutils

[files]
packages =
    bbapi

[entry_points]
console_scripts =
    bbapi = bbapi.cli:main
